--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,34 +10,84 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React Redux App</title>
+    <title>Goal Setter</title>
   </head>
+
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <div class="bubble-container">
+      <div class="bubbles">
+        <span class="bbb " style = "--i:11"></span>
+        <span class="bbb yellow" style = "--i:12"></span>
+        <span class="bbb green " style = "--i:7"></span>
+        <span class="bbb red" style = "--i:4"></span>
+        <span class="bbb " style = "--i:18"></span>
+        <span class="bbb " style = "--i:24"></span>
+        <span class="bbb " style = "--i:10"></span>
+        <span class="bbb yellow" style = "--i:14"></span>
+        <span class="bbb red" style = "--i:3"></span>
+        <span class="bbb green " style = "--i:23"></span>
+        <span class="bbb " style = "--i:18"></span>
+        <span class="bbb yellow" style = "--i:5"></span>
+        <span class="bbb " style = "--i:16"></span>
+        <span class="bbb red" style = "--i:19"></span>
+        <span class="bbb " style = "--i:6"></span>
+        <span class="bbb green " style = "--i:20"></span>
+        <span class="bbb red" style = "--i:25"></span>
+        <span class="bbb " style = "--i:22"></span>
+        <span class="bbb " style = "--i:18"></span>
+        <span class="bbb red" style = "--i:21"></span>
+        <span class="bbb " style = "--i:7"></span>
+        <span class="bbb yellow" style = "--i:15"></span>
+        <span class="bbb " style = "--i:4"></span>
+        <span class="bbb " style = "--i:13"></span>
+        <span class="bbb " style = "--i:26"></span>
+        <span class="bbb red" style = "--i:17"></span>
+        <span class="bbb green " style = "--i:13"></span>
+        <span class="bbb " style = "--i:28"></span>
+        <span class="bbb yellow" style = "--i:16"></span>
+        <span class="bbb red" style = "--i:19"></span>
+        <span class="bbb " style = "--i:6"></span>
+        <span class="bbb  green" style = "--i:20"></span>
+        <span class="bbb red" style = "--i:25"></span>
+        <span class="bbb " style = "--i:22"></span>
+        <span class="bbb green " style = "--i:18"></span>
+        <span class="bbb red" style = "--i:21"></span>
+        <span class="bbb " style = "--i:7"></span>
+        <span class="bbb yellow" style = "--i:15"></span>
+        <span class="bbb " style = "--i:4"></span>
+        <span class="bbb " style = "--i:13"></span>
+        <span class="bbb green " style = "--i:26"></span>
+        <span class="bbb red" style = "--i:17"></span>
+        <span class="bbb " style = "--i:13"></span>
+        <span class="bbb " style = "--i:28"></span>
+        <span class="bbb green " style = "--i:6"></span>
+        <span class="bbb " style = "--i:20"></span>
+        <span class="bbb red" style = "--i:25"></span>
+        <span class="bbb " style = "--i:22"></span>
+        <span class="bbb yellow" style = "--i:18"></span>
+        <span class="bbb red" style = "--i:21"></span>
+        <span class="bbb " style = "--i:7"></span>
+        <span class="bbb yellow" style = "--i:15"></span>
+        <span class="bbb " style = "--i:13"></span>
+        <span class="bbb green " style = "--i:28"></span>
+        <span class="bbb red" style = "--i:17"></span>
+        <span class="bbb " style = "--i:13"></span>
+        <span class="bbb " style = "--i:28"></span>
+        <span class="bbb green " style = "--i:6"></span>
+        <span class="bbb " style = "--i:20"></span>
+        <span class="bbb red" style = "--i:25"></span>
+        <span class="bbb " style = "--i:22"></span>
+        <span class="bbb " style = "--i:18"></span>
+        <span class="bbb red" style = "--i:21"></span>
+        <span class="bbb " style = "--i:7"></span>
+        <span class="bbb yellow" style = "--i:15"></span>
+        <span class="bbb " style = "--i:13"></span>
+        <span class="bbb green " style = "--i:28"></span>
+      </div>
+    </div>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    
+    <noscript>You need to enable JavaScript to run this app.</noscript>
   </body>
 </html>
