--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,73 +17,74 @@
     <div id="root"></div>
     <div class="bubble-container">
       <div class="bubbles">
-        <span class="bbb " style = "--i:11"></span>
+        <span class="bbb"        style = "--i:21"></span>
         <span class="bbb yellow" style = "--i:12"></span>
         <span class="bbb green " style = "--i:7"></span>
-        <span class="bbb red" style = "--i:4"></span>
-        <span class="bbb " style = "--i:18"></span>
-        <span class="bbb " style = "--i:24"></span>
-        <span class="bbb " style = "--i:10"></span>
+        <span class="bbb red"    style = "--i:4"></span>
+        <span class="bbb "       style = "--i:18"></span>
+        <span class="bbb purple" style = "--i:24"></span>
+        <span class="bbb "       style = "--i:10"></span>
         <span class="bbb yellow" style = "--i:14"></span>
-        <span class="bbb red" style = "--i:3"></span>
+        <span class="bbb red"    style = "--i:3"></span>
         <span class="bbb green " style = "--i:23"></span>
-        <span class="bbb " style = "--i:18"></span>
+        <span class="bbb "       style = "--i:18"></span>
         <span class="bbb yellow" style = "--i:5"></span>
-        <span class="bbb " style = "--i:16"></span>
-        <span class="bbb red" style = "--i:19"></span>
-        <span class="bbb " style = "--i:6"></span>
-        <span class="bbb green " style = "--i:20"></span>
-        <span class="bbb red" style = "--i:25"></span>
-        <span class="bbb " style = "--i:22"></span>
-        <span class="bbb " style = "--i:18"></span>
-        <span class="bbb red" style = "--i:21"></span>
-        <span class="bbb " style = "--i:7"></span>
+        <span class="bbb "       style = "--i:16"></span>
+        <span class="bbb red"    style = "--i:19"></span>
+        <span class="bbb "       style = "--i:6"></span>
+        <span class="bbb green " style = "--i:27"></span>
+        <span class="bbb red"    style = "--i:25"></span>
+        <span class="bbb purple "style = "--i:16"></span>
+        <span class="bbb "       style = "--i:9"></span>
+        <span class="bbb red"    style = "--i:21"></span>
+        <span class="bbb "       style = "--i:7"></span>
         <span class="bbb yellow" style = "--i:15"></span>
-        <span class="bbb " style = "--i:4"></span>
-        <span class="bbb " style = "--i:13"></span>
-        <span class="bbb " style = "--i:26"></span>
-        <span class="bbb red" style = "--i:17"></span>
+        <span class="bbb "       style = "--i:4"></span>
+        <span class="bbb "       style = "--i:18"></span>
+        <span class="bbb "       style = "--i:26"></span>
+        <span class="bbb red"    style = "--i:17"></span>
         <span class="bbb green " style = "--i:13"></span>
-        <span class="bbb " style = "--i:28"></span>
+        <span class="bbb "       style = "--i:28"></span>
         <span class="bbb yellow" style = "--i:16"></span>
-        <span class="bbb red" style = "--i:19"></span>
-        <span class="bbb " style = "--i:6"></span>
+        <span class="bbb red"    style = "--i:19"></span>
+        <span class="bbb "       style = "--i:6"></span>
         <span class="bbb  green" style = "--i:20"></span>
-        <span class="bbb red" style = "--i:25"></span>
-        <span class="bbb " style = "--i:22"></span>
+        <span class="bbb red"    style = "--i:25"></span>
+        <span class="bbb "       style = "--i:9"></span>
         <span class="bbb green " style = "--i:18"></span>
-        <span class="bbb red" style = "--i:21"></span>
-        <span class="bbb " style = "--i:7"></span>
+        <span class="bbb red"    style = "--i:21"></span>
+        <span class="bbb "       style = "--i:7"></span>
         <span class="bbb yellow" style = "--i:15"></span>
-        <span class="bbb " style = "--i:4"></span>
-        <span class="bbb " style = "--i:13"></span>
+        <span class="bbb "       style = "--i:4"></span>
+        <span class="bbb "       style = "--i:13"></span>
         <span class="bbb green " style = "--i:26"></span>
-        <span class="bbb red" style = "--i:17"></span>
-        <span class="bbb " style = "--i:13"></span>
-        <span class="bbb " style = "--i:28"></span>
+        <span class="bbb red"    style = "--i:17"></span>
+        <span class="bbb "       style = "--i:13"></span>
+        <span class="bbb  purple"style = "--i:28"></span>
         <span class="bbb green " style = "--i:6"></span>
-        <span class="bbb " style = "--i:20"></span>
-        <span class="bbb red" style = "--i:25"></span>
-        <span class="bbb " style = "--i:22"></span>
-        <span class="bbb yellow" style = "--i:18"></span>
-        <span class="bbb red" style = "--i:21"></span>
-        <span class="bbb " style = "--i:7"></span>
+        <span class="bbb "       style = "--i:20"></span>
+        <span class="bbb red"    style = "--i:11"></span>
+        <span class="bbb "       style = "--i:22"></span>
         <span class="bbb yellow" style = "--i:15"></span>
-        <span class="bbb " style = "--i:13"></span>
-        <span class="bbb green " style = "--i:28"></span>
-        <span class="bbb red" style = "--i:17"></span>
-        <span class="bbb " style = "--i:13"></span>
-        <span class="bbb " style = "--i:28"></span>
+        <span class="bbb red"    style = "--i:21"></span>
+        <span class="bbb "       style = "--i:7"></span>
+        <span class="bbb yellow" style = "--i:15"></span>
+        <span class="bbb "       style = "--i:13"></span>
         <span class="bbb green " style = "--i:6"></span>
-        <span class="bbb " style = "--i:20"></span>
-        <span class="bbb red" style = "--i:25"></span>
-        <span class="bbb " style = "--i:22"></span>
-        <span class="bbb " style = "--i:18"></span>
-        <span class="bbb red" style = "--i:21"></span>
-        <span class="bbb " style = "--i:7"></span>
+        <span class="bbb red"    style = "--i:17"></span>
+        <span class="bbb "       style = "--i:13"></span>
+        <span class="bbb "       style = "--i:28"></span>
+        <span class="bbb green " style = "--i:6"></span>
+        <span class="bbb "       style = "--i:20"></span>
+        <span class="bbb red"    style = "--i:10"></span>
+        <span class="bbb "       style = "--i:22"></span>
+        <span class="bbb purple "style = "--i:18"></span>
+        <span class="bbb red"    style = "--i:21"></span>
+        <span class="bbb "       style = "--i:7"></span>
         <span class="bbb yellow" style = "--i:15"></span>
-        <span class="bbb " style = "--i:13"></span>
+        <span class="bbb "       style = "--i:13"></span>
         <span class="bbb green " style = "--i:28"></span>
+
       </div>
     </div>
 
