Final (hopefully) commit

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="shortcut icon" href="./android-chrome-512x512.png" type="image/x-icon">
     <title>Goal Setter</title>
   </head>
 
